FIx color contrast

--- a/style.css
+++ b/style.css
@@ -472,6 +472,8 @@ h3 {
   }
 
   #contact-section p {
+    /* font-weight: bold; */
+    font-size: 22px;
     width: 600px;
   }
 
